--- a/styles/main.css
+++ b/styles/main.css
@@ -41,14 +41,23 @@ body {
     font-weight: 400;
     font-size: 18px;
     text-decoration: none;
+    cursor: pointer;
+    position: relative;
 }
 .header-nav a::after {
-    content: '';
-    width: 100%;
-    height: 1px;
-    background: transparent;
     display: block;
-    transition: .3s;
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 0%;
+    left: 50%;
+    background: transparent;
+    transition: width .3s ease-in-out;
+    transform: translateX(-50%);
+}
+.header-nav a:hover::after {
+    width: 100%;
+    background: #2B3541;
 }
 .social {
     display: flex;
@@ -58,31 +67,31 @@ body {
 }
 .instagram-logo {
     display: block;
-    width: 27px;
-    height: 27px;
+    width: 30px;
+    height: 30px;
     background-image: url(../icons/IN.svg);
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
     transition: .3s;
+    opacity: 0.8;
 }
 .instagram-logo:hover {
-    width: 38px;
-    height: 38px;
+    transform: scale(1.27);
 }
 .facebook-logo {
     display: block;
-    width: 27px;
-    height: 27px;
+    width: 30px;
+    height: 30px;
     background-image: url(../icons/FB.svg);
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
     transition: .3s;
+    opacity: 0.8;
 }
 .facebook-logo:hover {
-    width: 38px;
-    height: 38px;
+    transform: scale(1.27);
 }
 .banner {
     font-family: 'Montserrat', sans-serif;
@@ -94,6 +103,7 @@ body {
     text-align: left;
     margin-top: 242px;
     margin-bottom: 399px;
+    margin-left: 1px;
 }
 .banner-title {
     font-weight: 700;
@@ -119,8 +129,8 @@ body {
     line-height: 150%;
     max-width: 297px;
     margin-top: 0;
-    margin-left: 93px;
-    margin-bottom: 60px;
+    margin-left: 92px;
+    margin-bottom: 54px;
 }
 .banner-link {
     background-color: #FBF138;
@@ -129,10 +139,13 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
+    letter-spacing: 0.4pt;
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
+    margin-top: 0;
     margin-left: 91px;
+    margin-bottom: 50px;
     padding: 20px 30px;
     transition: 0.3s;
 }
@@ -140,6 +153,17 @@ body {
     background-color: #2B3541;
     box-shadow: 0px 13px 24px rgba(70, 86, 106, 0.2);
     color: #FBF138;
+}
+.banner-btn-scroll {
+    display: block;
+    background-image: url(../icons/Arrow.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 52px;
+    height: 55px;
+    cursor: pointer;
+    transition: .3s;
+    margin-top: 203px;
 }
 .banner-bg {
     display: flex;
@@ -163,7 +187,6 @@ body {
     opacity: 0.2;
     width: 535px;
     height: 850px;
-    position: static;
 }
 .banner-bg-right {
     background: linear-gradient(90deg, #FDF9B6 0%, rgba(253, 249, 182, 0.7) 166.81%);
@@ -226,4 +249,27 @@ body {
     border: none;
     border-radius: 5px;
     padding: 10px 32px;
+}
+.timetable {
+    width: 1143px;
+    height: 841px;
+    margin-bottom: 160px;
+}
+.timetable-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.timetable-grid {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px 366px 367px;
+    gap: 20px;
+}
+.timetable-grid-box {
+    border: 1px solid#2B3541;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
