--- a/styles/main.css
+++ b/styles/main.css
@@ -169,31 +169,29 @@ body {
     display: flex;
     position: absolute;
     width: 100%;
-    max-width: 790px;
     gap: 20px;
-    top: 0;
-    left: 107px;
+    top: 120px;
     z-index: -1;
+    margin-left: 331px;
 }
 .banner-bg img {
     position: absolute;
     width: 986px;
     height: 810px;
-    top: 159px;
-    margin-left: 326px;
-}
+    top: 39px;
+} 
 .banner-bg-left {
     background: linear-gradient(90deg, #FBF138 0%, rgba(253, 249, 182, 0.45) 145.23%);
     opacity: 0.2;
     width: 535px;
     height: 850px;
+    margin-left: 97px;
 }
 .banner-bg-right {
     background: linear-gradient(90deg, #FDF9B6 0%, rgba(253, 249, 182, 0.7) 166.81%);
     opacity: 0.2;
-    flex-basis: 30%;
     width: 235px;
-    height: 100%;
+    height: 850px;
 }
 .event {}
 .event-box {}
